// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`keyboardReducer reducer should KEYBOARD_HIDE_ACCESSORY 1`] = `
Object {
  "isAccessoryHidden": true,
}
`;

exports[`keyboardReducer reducer should KEYBOARD_SHOW_ACCESSORY 1`] = `
Object {
  "isAccessoryHidden": false,
}
`;

exports[`keyboardReducer reducer should return initialState 1`] = `
Object {
  "isAccessoryHidden": false,
}
`;
